# agentry

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Makefile  README.md  docs-requirements.txt  mkdocs.yml  rustfmt.toml
.claude/commands/: implementar-roadmap.md
.claude/skills/: adr-writer  handoff-updater  micro-ticket-planner  pr-review-guard  secrets-guard
.github/workflows/: ci.yml
assets/logo/: gerar-logo-icone.py
crates/cli/: Cargo.toml
crates/cli/assets/: logo-icone.rgb
crates/cli/src/: audit_sink.rs  init.rs  main.rs  repl.rs  sessao.rs  streaming.rs  tool_executor.rs
crates/cli/src/tui/: ask_user.rs  chat.rs  diff.rs  keybind.rs  logo.rs  mod.rs  model_picker.rs
crates/core/: Cargo.toml
crates/core/src/: credentials.rs  global_dir.rs  lib.rs  project_instructions.rs  skills.rs  state_dir.rs
crates/core/src/checkpoint/: mod.rs
crates/core/src/config/: mod.rs  privacy.rs
crates/core/src/context/: ast.rs  mod.rs
crates/core/src/context/lsp/: client.rs  mod.rs
crates/core/src/context/rag/: chunk.rs  hybrid_search.rs  incremental.rs  lexical_index.rs  mod.rs  semantic_index.rs
crates/core/src/context/repo_map/: graph.rs  mod.rs  rank.rs
crates/core/src/egress/: allowlist.rs  audit.rs  mod.rs  redact.rs
crates/core/src/guardrail/: mod.rs
crates/core/src/mcp/: mod.rs
crates/core/src/memory/: mod.rs
crates/core/src/model/: mod.rs
crates/core/src/provider/: anthropic.rs  mock.rs  mod.rs  ollama.rs  openai_compat.rs
crates/core/src/router/: mod.rs
crates/core/src/session/: mod.rs  persist.rs  reviewer.rs
crates/core/src/tools/: ask_user.rs  checkpoint.rs  code_search.rs  fs.rs  glob.rs  lsp.rs  mcp.rs  mod.rs  permission.rs  repo_map.rs  shell.rs  skill.rs  subagent.rs  todo.rs  web_fetch.rs  web_search.rs
crates/core/src/transport/: mod.rs
crates/core/tests/: lsp_client.rs  lsp_tools.rs  mcp_client.rs  mcp_tool.rs
docs/: CURRENT-STATE.md  architecture.md  decisoes-autonomas.md  index.md  pesquisa-tui-referencias.md  roadmap-longo-prazo.md  roadmap-v0.1.md  roadmap-v0.10.md  roadmap-v0.11.md  roadmap-v0.12.md  roadmap-v0.13.md  roadmap-v0.14.md  roadmap-v0.15.md  roadmap-v0.16.md  roadmap-v0.2.md  roadmap-v0.3.md  roadmap-v0.4.md  roadmap-v0.5.md  roadmap-v0.6.md  roadmap-v0.7.md  roadmap-v0.8.md  roadmap-v0.9.md  testing.md
docs/adr/: 0001-fundacao-camada-llm.md  0002-modelo-privacidade-egresso.md  0003-consumo-artefatos-profiles.md  0004-postura-sinergia-open-source.md  0005-portabilidade-cross-platform.md  0006-litellm-fonte-de-modelos.md  0007-guardrails-configuraveis-de-conteudo.md  0008-parametros-de-chamada-e-presets-por-task-class.md  0009-timeout-adaptativo-e-keep-alive-para-troca-de-modelo.md  0010-repo-map-tree-sitter.md  0011-rag-semantico-local-para-codigo.md  0012-saida-estruturada-para-tool-calling.md  0013-tool-de-grounding-via-lsp.md  0014-override-runtime-de-parametros-de-chamada.md  0015-reviewer-auditoria-semantica-por-task-class.md  0016-compactacao-de-historico-de-sessao.md  0017-diretorio-de-estado-local-do-agente.md  0018-artefato-e-schema-minimo-de-configuracao-do-agentry.md  0019-bootstrap-de-agentry-settings-json-via-init.md  0020-agentryignore-com-respeito-opcional-a-gitignore.md  0021-schema-de-configuracao-de-task-class.md  0022-convencao-de-configuracao-autoexplicativa.md  0023-memoria-de-projeto-agents-md-e-skills.md  0024-tool-askuser.md  0025-web-tools-webfetch-websearch-searxng.md  0026-tool-glob-e-shell-em-background.md  0027-tui-via-ratatui.md  0028-mcp-client-via-rmcp.md  0029-uso-de-tokens-visivel-na-sessao.md  0030-checkpoints-e-undo-de-mudancas-de-arquivo.md  0031-subagentes-com-egresso-restrito.md  0032-memoria-de-projeto-explicita.md  0033-teto-de-turnos-consecutivos-com-tool-call.md  0034-tool-todo-write-sem-estado-persistido.md  0035-saida-de-tool-visivel-na-tui-com-blocos-expansiveis.md  0036-persistencia-de-sessao-opt-in-em-markdown.md  0037-audit-log-persistente.md  0038-configuracao-global-do-usuario.md  README.md
docs/governanca/: auditoria.md  dependencias.md  faq.md  guardrails.md  index.md  permissoes.md  privacidade-e-egresso.md
docs/interop/: README.md  exchange-log.md
docs/usuario/: configuracao.md  faq.md  guardrails.md  index.md  instalacao.md  skills.md  uso.md
scripts/: test.ps1  test.sh  usability-test.ps1  usability-test.sh
