# Caminho relativo: Cargo.toml
[workspace]
resolver = "2"
members = ["crates/cli", "crates/core"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Iago Leal"]
repository = "https://github.com/psiagoleal/agentry"
rust-version = "1.79"

# Dependências compartilhadas (versões únicas por workspace).
[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", default-features = false }
# rustls-tls (não native-tls): evita depender de OpenSSL do SO, mantendo a
# matriz de CI de 3 SOs (ADR-0005) livre de dependência de TLS nativa por plataforma.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Lints compartilhados do workspace (qualidade desde o bootstrap).
[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
