# Caminho relativo: Cargo.toml
[workspace]
resolver = "2"
members = ["crates/cli", "crates/core"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Iago Leal"]
repository = "https://github.com/psiagoleal/agentry"
rust-version = "1.79"

# Dependências compartilhadas (versões únicas por workspace).
[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", default-features = false }
# rustls-tls (não native-tls): evita depender de OpenSSL do SO, mantendo a
# matriz de CI de 3 SOs (ADR-0005) livre de dependência de TLS nativa por plataforma.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
# Semântica de .gitignore/.claudeignore correta e madura (do ripgrep) em vez
# de reimplementar globs/negação/precedência na mão (MT-12).
ignore = "0.4"
clap = { version = "4", features = ["derive"] }
# Extração de símbolos AST-aware (repo-map, MT-18/ADR-0010). Gramáticas por
# linguagem adotadas individualmente, cada uma vetada por maturidade/licença
# (ADR-0004) — não há adoção em lote.
tree-sitter = "0.26"
tree-sitter-rust = "0.24"
tree-sitter-python = "0.25"
# Já dependência transitiva do tree-sitter (QueryCursor::matches devolve um
# StreamingIterator); tornada direta só para trazer o trait ao escopo.
streaming-iterator = "0.1"
# Cliente LSP mínimo (MT-23/ADR-0013): lsp-types traz os tipos do protocolo;
# lsp-server traz o framing JSON-RPC (Message::read/write, genéricos sobre
# BufRead/Write — reaproveitado no lado cliente, não só servidor).
# Maturidade verificada (ADR-0013): lsp-types (MIT, 28M+ downloads) é
# dependência direta do rust-analyzer, ativo; lsp-server (Apache-2.0, 12M+
# downloads) é o próprio crate de framing do rust-analyzer.
lsp-types = "0.97"
lsp-server = "0.8"
# Índice lexical sobre os chunks do RAG (MT-26/ADR-0011): motor de busca
# nativo em Rust, embutido/in-process (sem servidor externo nem ponte FFI),
# mantendo a árvore de dependências auditável (ADR-0001).
# Maturidade verificada (ADR-0011, 2026-07-08): 15.523 estrelas, 15M+
# downloads no crates.io, MIT, push recente.
tantivy = "0.26"
# Índice semântico sobre os chunks do RAG (MT-27/ADR-0011): vector DB
# embutida/in-process, nativa em Rust (Lance, sobre Arrow), sem servidor
# externo nem ponte FFI.
# Maturidade verificada (ADR-0011, 2026-07-08): 10.826 estrelas, 639K+
# downloads no crates.io, Apache-2.0, push recente.
lancedb = "0.31"
# Representação columnar (Arrow) exigida pela API do lancedb — já
# dependência transitiva dele; tornada direta só para construir/ler
# RecordBatch nesta camada.
arrow-array = "58"
arrow-schema = "58"
# TryStreamExt::try_collect — o resultado de uma consulta do lancedb é um
# stream assíncrono de RecordBatch, não um Vec pronto.
futures = "0.3"

# Lints compartilhados do workspace (qualidade desde o bootstrap).
[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
