# Caminho relativo: crates/cli/Cargo.toml
[package]
name = "agentry"
description = "CLI agêntico de codificação em Rust, multi-provedor, com roteamento por classe de privacidade."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "agentry"
path = "src/main.rs"

[dependencies]
agentry-core = { path = "../core" }
clap = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "io-std"] }
ratatui = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }

[lints]
workspace = true
