# Caminho relativo: crates/core/Cargo.toml
[package]
name = "agentry-core"
description = "Núcleo do agentry: tipos, providers, transporte/egresso, router e contexto."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "agentry_core"

[lints]
workspace = true
