# Caminho relativo: crates/core/Cargo.toml
[package]
name = "agentry-core"
description = "Núcleo do agentry: tipos, providers, transporte/egresso, router e contexto."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "agentry_core"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
# "rt": Transport::post_json_lines (MT-08) faz tokio::spawn para bombear o
# fluxo de linhas — passa a ser runtime, não só dev-dependency.
# "process": SystemCommandRunner (MT-13) roda comandos via tokio::process.
tokio = { workspace = true, features = ["sync", "rt", "process"] }
reqwest = { workspace = true }
ignore = { workspace = true }
tree-sitter = { workspace = true }
tree-sitter-rust = { workspace = true }
tree-sitter-python = { workspace = true }
streaming-iterator = { workspace = true }
lsp-types = { workspace = true }
lsp-server = { workspace = true }
tantivy = { workspace = true }
lancedb = { workspace = true }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
futures = { workspace = true }
rmcp = { workspace = true }

[dev-dependencies]
# "net"/"io-util": servidor HTTP mínimo de teste do MT-07 (sem lib de mock nova).
tokio = { workspace = true, features = ["macros", "rt", "net", "io-util"] }

[lints]
workspace = true
